# law-search-service

./: .env.example  .gitignore  AGENTS.md  API_SPEC.md  Klaro-Hub-아키텍처.puml  MCP_TOOLS_SPEC.md  RAG-챗봇-서비스-설계.md  README.md  architecture_proposal.md  law-search-service-architecture.puml  pyproject.toml  requirements.txt  서비스_분리_설계.md
scripts/: add_fts_indexes.py  collect_laws.py  init_db.py  test_law_api.py
src/: main.py
src/config/: settings.py
src/core/: __init__.py  cache.py  file_system_store.py  in_memory_cache.py  in_memory_store.py  qdrant_store.py  redis_cache.py  scheduler.py  vector_store.py
src/mcp/: __init__.py  server.py
src/models/: __init__.py  entities.py
src/pipeline/collectors/: law_collector.py
src/repository/: __init__.py  db.py  fts_queries.py
src/utils/: logger.py
